--- a/src/main/xhtml/index.xhtml
+++ b/src/main/xhtml/index.xhtml
@@ -1,11 +1,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr-FR">
 <head>
   <title>Ewol</title>
+  <script async="" type="module" src="ewol"/>
 </head>
 
 <body>
 
-<p>Bienvenue sur Ewol.</p>
+<header>
+  <h1>Bienvenue sur Ewol&#x202F;!</h1>
+</header>
+
+<canvas id="canvas" width="1280" height="720"/>
 
 </body>
 </html>
